EXTRA_DIST = Contents.m JEMRIS_seq.fig JEMRIS_seq.m JEMRIS_sim.fig JEMRIS_sim.m MNIbrain.mat MNIdeltaB.mat Makefile.am ModuleIcons.mat brainSample.m calcBfromXi.m changeSeqAttributes.m changeSeqTree.m getAllModules.m out parseXMLseq.m pbs_script.sh plotSeqTree.m plotseq.m plotsim.m readEvol.m seqcad_uitoolbar.m uniform.xml userSample.mat writeSample.m writeXMLseq.m 