EXTRA_DIST = 1chext.xml 8chheadcyl.xml Makefile.am ThreePulses.xml analytic.xml epi.xml gre.xml radial.xml sli_sel.xml tse.xml extpulses.xml ext_gx.h5 ext_rf.h5 sens.h5
examplesdir = $(datadir)/jemris/examples
examples_DATA = $(EXTRA_DIST)

SUBDIRS = approved

clean-local:
	rm -f *.out *_signal.h5 1chext.h5 8chheadcyl.h5 ThreePulses.h5 analytic.h5 epi.h5 gre.h5 radial.h5 sli_sel.h5 tse.h5
