EXTRA_DIST = Contents.m JEMRIS_ContainerSequence.fig JEMRIS_ContainerSequence.m JEMRIS_seq.fig JEMRIS_seq.m JEMRIS_sim.fig JEMRIS_sim.m JEMRIS_txrx.fig JEMRIS_txrx.m MNIbrain.mat MNIdeltaB.mat Makefile.am ModuleIcons.mat brainSample.m calcBfromXi.m changeSeqAttributes.m changeSeqTree.m getAllModules.m parseXMLseq.m pbs_script.sh plotCoils.m plotsensitivity.m plotSeqTree.m plotseq.m plotsim.m readEvol.m seqcad_uitoolbar.m uniform.xml userSample.mat writeSample.m writeXMLseq.m 
matlabdir = $(datadir)/jemris/matlab
matlab_DATA = $(EXTRA_DIST)
