EXTRA_DIST = ConfigFile.in ConfigMRI.in CreatePVD.cpp CreateParticleTracer.cpp CreateProgrammableFilter.cpp CreateProgrammableFilter_fill.cpp CreateProgrammableSource.cpp CreateSimuFiles.c MergeDatJEMRIS.py README.md ReadFreeFemVTK.cpp ReadmeForDevelopers.md SetSequence.c go.sh header.hpp

examplesdir = $(datadir)/jemris/angio_simu/FlowConversion
examples_DATA = $(EXTRA_DIST)

SUBDIRS = vtk


